# RbbBot

./: .dockerignore  .gitignore  Dockerfile  README.md  aerich-test.toml  aerich_test_config.py  docker-compose-test.yml  docker-compose.yml  pyproject.toml
migrations/models/: 40_20221113141513_None.py  43_20221227113530_None.py  44_20221227113844_command_log.py  45_20221228171301_bot updates.py  46_20221228201445_source_update.py  47_20221228204800_source_model.py  48_20230530172725_None.py  49_20260718_remove_command_log.py  50_20260718_guild_lifecycle.py  51_20260718_user_tag_opt_out.py
rbb_bot/: __init__.py  container_start.py  dbconfig.py  dev_start.py  launcher.py  migration_bootstrap.py  rbb.py
rbb_bot/cogs/: _google_cog.py  _sns_cog.py  _updates_cog.py  admin_cog.py  emojis_cog.py  google_cog.py  guild_cog.py  hangman_cog.py  kpop_cog.py  logging_cog.py  media_cog.py  meme_cog.py  misc_cog.py  privacy_cog.py  reminders_cog.py  roles_cog.py  sns_cog.py  source_cog.py  tags_cog.py  updates_cog.py
rbb_bot/core/: errors.py  formatted_timestamps.py  result.py
tests/: README.md  __init__.py  _database.py  conftest.py  test_aerich_config.py  test_container_start.py  test_database_config.py  test_error_logging.py  test_formatting.py  test_guild_data_service.py  test_guild_lifecycle_cog.py  test_guild_lifecycle_migration.py  test_migration_bootstrap.py  test_migrations.py  test_privacy_cog.py  test_regex.py  test_runtime_credentials.py  test_tag_service.py  test_tags_cog_listener.py  test_user_data_service.py  test_user_tag_opt_out_migration.py
(+47 files in other folders)
